--- a/AppControl Manager/Strings/AR/Resources.resw
+++ b/AppControl Manager/Strings/AR/Resources.resw
@@ -6146,4 +6146,46 @@
   <data name="UseV2CIManagementSettingsCard.AutomationProperties.HelpText" xml:space="preserve">
     <value>قم بتمكين هذه الميزة لإتاحة طرق بديلة لنشر وإزالة نهج App Control. هذه الطرق لا تعتمد على الملف التنفيذي CiTool ويمكن استخدامها إذا كان CiTool محجوباً أو غير متاح.</value>
   </data>
+    <data name="ClearOperationSystemLogsMenuFlyoutItem.Text" xml:space="preserve">
+    <value>مسح سجلات النظام</value>
+  </data>
+  <data name="ClearOperationSystemLogsMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>مسح سجلات مختلفة في نظام التشغيل. هذا الإجراء غير قابل للاسترجاع.</value>
+  </data>
+  <data name="ClearOperationSystemLogsMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>مسح سجلات مختلفة في نظام التشغيل. هذا الإجراء غير قابل للاسترجاع.</value>
+  </data>
+  <data name="ClearOSCodeIntegrityLogsMenuFlyoutItem.Text" xml:space="preserve">
+    <value>مسح سجلات Code Integrity</value>
+  </data>
+  <data name="ClearOSCodeIntegrityLogsMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>مسح جميع سجلات التشغيل الخاصة بـ Code Integrity من النظام.</value>
+  </data>
+  <data name="ClearOSCodeIntegrityLogsMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>مسح جميع سجلات التشغيل الخاصة بـ Code Integrity من النظام.</value>
+  </data>
+  <data name="ClearOSAppLockerLogsMenuFlyoutItem.Text" xml:space="preserve">
+    <value>مسح سجلات App Locker</value>
+  </data>
+  <data name="ClearOSAppLockerLogsMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>مسح جميع سجلات App Locker من النظام.</value>
+  </data>
+  <data name="ClearOSAppLockerLogsMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>مسح جميع سجلات App Locker من النظام.</value>
+  </data>
+  <data name="ClearOSCodeIntegrityLogsSuccessMsg" xml:space="preserve">
+    <value>تم مسح جميع سجلات التشغيل الخاصة بـ Code Integrity من النظام بنجاح.</value>
+  </data>
+  <data name="ClearOSAppLockerLogsSuccessMsg" xml:space="preserve">
+    <value>تم مسح جميع سجلات App Locker من النظام بنجاح.</value>
+  </data>
+  <data name="OSLogsDeletionContentDialogMsg" xml:space="preserve">
+    <value>هل أنت متأكد من أنك تريد مسح السجلات المحددة؟ هذا الإجراء غير قابل للاسترجاع.</value>
+  </data>
+  <data name="OSCodeIntegrityLogsDeletionContentDialogTitle" xml:space="preserve">
+    <value>حذف سجلات Code Integrity</value>
+  </data>
+  <data name="OSAppLockerLogsDeletionContentDialogTitle" xml:space="preserve">
+    <value>حذف سجلات App Locker</value>
+  </data>
 </root>
