AppControl Manager v2.0.53.0 and Harden System Security v1.0.26.0
* Added real-time CPU temperature to the Home page.

* Added advanced CPU details to the home page.

* Added Computer name to the home page.

* Added OS edition, version and build information to the home page.

* Added RAM speed and generation details to the home page.

* Added real-time total amount of Internet uploaded data and downloaded data to the home page.

* Features in the home page that display real-time data such as CPU temperature, network speed and so on, are highly optimized, fast and only active when the user is on the home page. If you navigate away to another page, they will stop gathering data and will not run in the background so they do not consume unnecessary resources.

* The time it takes from clicking on the app icon on taskbar or start menu to launch it to the home page load is less than 1 second and will stay that way.

* Localized the home page information for all of the supported languages.

* ***Significantly*** improved the speed and performance of the [Event Log Policy Creation](https://github.com/HotCakeX/Harden-Windows-Security/wiki/Create-Policy-From-Event-Logs). Now the scans of Code Integrity and App Locker event logs from local system or custom EVTX files *take half of the time* compared to the previous version. This performance boost is achieved by implementing new algorithms and optimizations in the scanning engine, rather than simply using more CPU cores and parallelism. The system resource usage actually remains the same as before or even lower in some cases, while the speed is greatly improved.

* Added context menu options for copying rows and individual details to the Microsoft Security Baseline page.

* Added context menu options for copying rows and individual details to the Microsoft 365 Apps Security Baseline page.

* CTRL + C keyboard shortcut can be used to copy one or multiple rows to the clipboard.

* Added support for restoring Attack Surface Reduct

--- a/AppControl Manager/Strings/AR/Resources.resw
+++ b/AppControl Manager/Strings/AR/Resources.resw
@@ -6188,4 +6188,55 @@
   <data name="OSAppLockerLogsDeletionContentDialogTitle" xml:space="preserve">
     <value>حذف سجلات App Locker</value>
   </data>
+    <data name="SystemOverview.Text" xml:space="preserve">
+    <value>نظرة عامة على النظام</value>
+  </data>
+  <data name="SystemTime.Text" xml:space="preserve">
+    <value>وقت النظام</value>
+  </data>
+  <data name="TimeZone.Text" xml:space="preserve">
+    <value>المنطقة الزمنية</value>
+  </data>
+  <data name="User.Text" xml:space="preserve">
+    <value>المستخدم</value>
+  </data>
+  <data name="ComputerName.Text" xml:space="preserve">
+    <value>اسم الكمبيوتر</value>
+  </data>
+  <data name="OperatingSystem.Text" xml:space="preserve">
+    <value>نظام التشغيل</value>
+  </data>
+  <data name="Uptime.Text" xml:space="preserve">
+    <value>مدة التشغيل</value>
+  </data>
+  <data name="SystemRAM.Text" xml:space="preserve">
+    <value>ذاكرة RAM الخاصة بالنظام</value>
+  </data>
+  <data name="AppRAMUsage.Text" xml:space="preserve">
+    <value>استخدام ذاكرة RAM للتطبيق</value>
+  </data>
+  <data name="StorageSize.Text" xml:space="preserve">
+    <value>سعة التخزين</value>
+  </data>
+  <data name="InternetSpeed.Text" xml:space="preserve">
+    <value>سرعة الإنترنت</value>
+  </data>
+  <data name="CPUTemperature.Text" xml:space="preserve">
+    <value>درجة حرارة المعالج</value>
+  </data>
+  <data name="OnlineMicrosoftDefenderStatus.Text" xml:space="preserve">
+    <value>حالة Microsoft Defender عبر الإنترنت</value>
+  </data>
+  <data name="EngineVersion.Text" xml:space="preserve">
+    <value>إصدار المحرك</value>
+  </data>
+  <data name="SignatureVersion.Text" xml:space="preserve">
+    <value>إصدار التواقيع</value>
+  </data>
+  <data name="PlatformVersion.Text" xml:space="preserve">
+    <value>إصدار المنصة</value>
+  </data>
+  <data name="SignatureUpdate.Text" xml:space="preserve">
+    <value>تحديث التواقيع (UTC)</value>
+  </data>
 </root>
