--- a/Harden System Security/Strings/AR/Resources.resw
+++ b/Harden System Security/Strings/AR/Resources.resw
@@ -2252,10 +2252,10 @@
     <data name="StatusHeader.Text" xml:space="preserve">
     <value>الحالة</value>
   </data>
-  <data name="CurrentValueHeaderText" xml:space="preserve">
+  <data name="CurrentValueHeader.Text" xml:space="preserve">
     <value>القيمة الحالية</value>
   </data>
-  <data name="ExpectedValueHeaderText" xml:space="preserve">
+  <data name="ExpectedValueHeader.Text" xml:space="preserve">
     <value>القيمة المتوقعة</value>
   </data>
   <!--Security Baselines ListView Headers End-->
@@ -2402,9 +2402,6 @@
     <data name="DragAndDropHintFileReputationCaption" xml:space="preserve">
      <value>أفلت الملف للتحقق من السمعة</value>
   </data>
-  <data name="NoVerificationResultsToExport" xml:space="preserve">
-  <value>لا توجد نتائج تحقق للتصدير</value>
-</data>
 <data name="ExportFileNameFormat" xml:space="preserve">
   <value>HardenSystemSecurity_Data_Export_{0}.json</value>
 </data>
@@ -4301,4 +4298,55 @@
   <data name="RestoreModeMenuFlyoutItem.Text" xml:space="preserve">
   <value>وضع الاستعادة</value>
 </data>
+  <data name="SystemOverview.Text" xml:space="preserve">
+    <value>نظرة عامة على النظام</value>
+  </data>
+  <data name="SystemTime.Text" xml:space="preserve">
+    <value>وقت النظام</value>
+  </data>
+  <data name="TimeZone.Text" xml:space="preserve">
+    <value>المنطقة الزمنية</value>
+  </data>
+  <data name="User.Text" xml:space="preserve">
+    <value>المستخدم</value>
+  </data>
+  <data name="ComputerName.Text" xml:space="preserve">
+    <value>اسم الكمبيوتر</value>
+  </data>
+  <data name="OperatingSystem.Text" xml:space="preserve">
+    <value>نظام التشغيل</value>
+  </data>
+  <data name="Uptime.Text" xml:space="preserve">
+    <value>مدة التشغيل</value>
+  </data>
+  <data name="SystemRAM.Text" xml:space="preserve">
+    <value>ذاكرة RAM الخاصة بالنظام</value>
+  </data>
+  <data name="AppRAMUsage.Text" xml:space="preserve">
+    <value>استخدام ذاكرة RAM للتطبيق</value>
+  </data>
+  <data name="StorageSize.Text" xml:space="preserve">
+    <value>سعة التخزين</value>
+  </data>
+  <data name="InternetSpeed.Text" xml:space="preserve">
+    <value>سرعة الإنترنت</value>
+  </data>
+  <data name="CPUTemperature.Text" xml:space="preserve">
+    <value>درجة حرارة المعالج</value>
+  </data>
+  <data name="OnlineMicrosoftDefenderStatus.Text" xml:space="preserve">
+    <value>حالة Microsoft Defender عبر الإنترنت</value>
+  </data>
+  <data name="EngineVersion.Text" xml:space="preserve">
+    <value>إصدار المحرك</value>
+  </data>
+  <data name="SignatureVersion.Text" xml:space="preserve">
+    <value>إصدار التواقيع</value>
+  </data>
+  <data name="PlatformVersion.Text" xml:space="preserve">
+    <value>إصدار المنصة</value>
+  </data>
+  <data name="SignatureUpdate.Text" xml:space="preserve">
+    <value>تحديث التواقيع (UTC)</value>
+  </data>
 </root>
