--- a/Harden System Security/Strings/de-DE/Resources.resw
+++ b/Harden System Security/Strings/de-DE/Resources.resw
@@ -2252,10 +2252,10 @@
     <data name="StatusHeader.Text" xml:space="preserve">
     <value>Status</value>
   </data>
-  <data name="CurrentValueHeaderText" xml:space="preserve">
+  <data name="CurrentValueHeader.Text" xml:space="preserve">
     <value>Aktueller Wert</value>
   </data>
-  <data name="ExpectedValueHeaderText" xml:space="preserve">
+  <data name="ExpectedValueHeader.Text" xml:space="preserve">
     <value>Erwarteter Wert</value>
   </data>
   <!--Security Baselines ListView Headers End-->
@@ -2399,9 +2399,6 @@
     <data name="DragAndDropHintFileReputationCaption" xml:space="preserve">
      <value>Datei ablegen, um die Reputation zu prüfen</value>
   </data>
-  <data name="NoVerificationResultsToExport" xml:space="preserve">
-  <value>Keine Prüfergebnisse zum Exportieren</value>
-</data>
 <data name="ExportFileNameFormat" xml:space="preserve">
   <value>HardenSystemSecurity_Datenexport_{0}.json</value>
 </data>
@@ -4301,4 +4298,55 @@ Fingerabdruck: {3}</value>
   <data name="RestoreModeMenuFlyoutItem.Text" xml:space="preserve">
   <value>Wiederherstellungsmodus</value>
 </data>
+  <data name="SystemOverview.Text" xml:space="preserve">
+    <value>Systemübersicht</value>
+  </data>
+  <data name="SystemTime.Text" xml:space="preserve">
+    <value>Systemzeit</value>
+  </data>
+  <data name="TimeZone.Text" xml:space="preserve">
+    <value>Zeitzone</value>
+  </data>
+  <data name="User.Text" xml:space="preserve">
+    <value>Benutzer</value>
+  </data>
+  <data name="ComputerName.Text" xml:space="preserve">
+    <value>Computername</value>
+  </data>
+  <data name="OperatingSystem.Text" xml:space="preserve">
+    <value>Betriebssystem</value>
+  </data>
+  <data name="Uptime.Text" xml:space="preserve">
+    <value>Betriebszeit</value>
+  </data>
+  <data name="SystemRAM.Text" xml:space="preserve">
+    <value>System-Arbeitsspeicher</value>
+  </data>
+  <data name="AppRAMUsage.Text" xml:space="preserve">
+    <value>RAM-Nutzung der Anwendung</value>
+  </data>
+  <data name="StorageSize.Text" xml:space="preserve">
+    <value>Speicherkapazität</value>
+  </data>
+  <data name="InternetSpeed.Text" xml:space="preserve">
+    <value>Internetgeschwindigkeit</value>
+  </data>
+  <data name="CPUTemperature.Text" xml:space="preserve">
+    <value>CPU-Temperatur</value>
+  </data>
+  <data name="OnlineMicrosoftDefenderStatus.Text" xml:space="preserve">
+    <value>Online-Status von Microsoft Defender</value>
+  </data>
+  <data name="EngineVersion.Text" xml:space="preserve">
+    <value>Engine-Version</value>
+  </data>
+  <data name="SignatureVersion.Text" xml:space="preserve">
+    <value>Signaturversion</value>
+  </data>
+  <data name="PlatformVersion.Text" xml:space="preserve">
+    <value>Plattformversion</value>
+  </data>
+  <data name="SignatureUpdate.Text" xml:space="preserve">
+    <value>Signatur-Update (UTC)</value>
+  </data>
 </root>
