--- a/Harden System Security/Strings/en-US/Resources.resw
+++ b/Harden System Security/Strings/en-US/Resources.resw
@@ -2252,10 +2252,10 @@
     <data name="StatusHeader.Text" xml:space="preserve">
     <value>Status</value>
   </data>
-  <data name="CurrentValueHeaderText" xml:space="preserve">
+  <data name="CurrentValueHeader.Text" xml:space="preserve">
     <value>Current Value</value>
   </data>
-  <data name="ExpectedValueHeaderText" xml:space="preserve">
+  <data name="ExpectedValueHeader.Text" xml:space="preserve">
     <value>Expected Value</value>
   </data>
   <!--Security Baselines ListView Headers End-->
@@ -2399,9 +2399,6 @@
     <data name="DragAndDropHintFileReputationCaption" xml:space="preserve">
      <value>Drop file to check reputation</value>
   </data>
-  <data name="NoVerificationResultsToExport" xml:space="preserve">
-  <value>No verification results to export</value>
-</data>
 <data name="ExportFileNameFormat" xml:space="preserve">
   <value>HardenSystemSecurity_Data_Export_{0}.json</value>
 </data>
@@ -4300,5 +4297,56 @@ Thumbprint: {3}</value>
   </data>
   <data name="RestoreModeMenuFlyoutItem.Text" xml:space="preserve">
     <value>Restoration Mode</value>
+  </data>
+  <data name="SystemOverview.Text" xml:space="preserve">
+    <value>System Overview</value>
+  </data>
+  <data name="SystemTime.Text" xml:space="preserve">
+    <value>System Time</value>
+  </data>
+  <data name="TimeZone.Text" xml:space="preserve">
+    <value>Time Zone</value>
+  </data>
+  <data name="User.Text" xml:space="preserve">
+    <value>User</value>
+  </data>
+  <data name="ComputerName.Text" xml:space="preserve">
+    <value>Computer Name</value>
+  </data>
+  <data name="OperatingSystem.Text" xml:space="preserve">
+    <value>Operating System</value>
+  </data>
+  <data name="Uptime.Text" xml:space="preserve">
+    <value>Uptime</value>
+  </data>
+  <data name="SystemRAM.Text" xml:space="preserve">
+    <value>System RAM</value>
+  </data>
+  <data name="AppRAMUsage.Text" xml:space="preserve">
+    <value>App RAM Usage</value>
+  </data>
+  <data name="StorageSize.Text" xml:space="preserve">
+    <value>Storage Size</value>
+  </data>
+  <data name="InternetSpeed.Text" xml:space="preserve">
+    <value>Internet Speed</value>
+  </data>
+  <data name="CPUTemperature.Text" xml:space="preserve">
+    <value>CPU Temperature</value>
+  </data>
+  <data name="OnlineMicrosoftDefenderStatus.Text" xml:space="preserve">
+    <value>Online Microsoft Defender Status</value>
+  </data>
+  <data name="EngineVersion.Text" xml:space="preserve">
+    <value>Engine Version</value>
+  </data>
+  <data name="SignatureVersion.Text" xml:space="preserve">
+    <value>Signature Version</value>
+  </data>
+  <data name="PlatformVersion.Text" xml:space="preserve">
+    <value>Platform Version</value>
+  </data>
+  <data name="SignatureUpdate.Text" xml:space="preserve">
+    <value>Signature Update (UTC)</value>
   </data>
 </root>
