--- a/Harden System Security/Strings/hi-IN/Resources.resw
+++ b/Harden System Security/Strings/hi-IN/Resources.resw
@@ -2252,10 +2252,10 @@
     <data name="StatusHeader.Text" xml:space="preserve">
     <value>स्थिति</value>
   </data>
-  <data name="CurrentValueHeaderText" xml:space="preserve">
+  <data name="CurrentValueHeader.Text" xml:space="preserve">
     <value>वर्तमान मान</value>
   </data>
-  <data name="ExpectedValueHeaderText" xml:space="preserve">
+  <data name="ExpectedValueHeader.Text" xml:space="preserve">
     <value>अपेक्षित मान</value>
   </data>
   <!--Security Baselines ListView Headers End-->
@@ -2402,9 +2402,6 @@
     <data name="DragAndDropHintFileReputationCaption" xml:space="preserve">
      <value>प्रतिष्ठा जांचने के लिए फ़ाइल छोड़ें</value>
   </data>
-  <data name="NoVerificationResultsToExport" xml:space="preserve">
-  <value>निर्यात करने के लिए कोई सत्यापन परिणाम नहीं</value>
-</data>
 <data name="ExportFileNameFormat" xml:space="preserve">
   <value>HardenSystemSecurity_Data_Export_{0}.json</value>
 </data>
@@ -4301,4 +4298,55 @@
   <data name="RestoreModeMenuFlyoutItem.Text" xml:space="preserve">
   <value>पुनर्स्थापना मोड</value>
 </data>
+  <data name="SystemOverview.Text" xml:space="preserve">
+    <value>सिस्टम अवलोकन</value>
+  </data>
+  <data name="SystemTime.Text" xml:space="preserve">
+    <value>सिस्टम समय</value>
+  </data>
+  <data name="TimeZone.Text" xml:space="preserve">
+    <value>समय क्षेत्र</value>
+  </data>
+  <data name="User.Text" xml:space="preserve">
+    <value>उपयोगकर्ता</value>
+  </data>
+  <data name="ComputerName.Text" xml:space="preserve">
+    <value>कंप्यूटर नाम</value>
+  </data>
+  <data name="OperatingSystem.Text" xml:space="preserve">
+    <value>ऑपरेटिंग सिस्टम</value>
+  </data>
+  <data name="Uptime.Text" xml:space="preserve">
+    <value>सक्रिय समय</value>
+  </data>
+  <data name="SystemRAM.Text" xml:space="preserve">
+    <value>सिस्टम RAM</value>
+  </data>
+  <data name="AppRAMUsage.Text" xml:space="preserve">
+    <value>ऐप RAM उपयोग</value>
+  </data>
+  <data name="StorageSize.Text" xml:space="preserve">
+    <value>संग्रहण क्षमता</value>
+  </data>
+  <data name="InternetSpeed.Text" xml:space="preserve">
+    <value>इंटरनेट गति</value>
+  </data>
+  <data name="CPUTemperature.Text" xml:space="preserve">
+    <value>CPU तापमान</value>
+  </data>
+  <data name="OnlineMicrosoftDefenderStatus.Text" xml:space="preserve">
+    <value>ऑनलाइन Microsoft Defender स्थिति</value>
+  </data>
+  <data name="EngineVersion.Text" xml:space="preserve">
+    <value>इंजन संस्करण</value>
+  </data>
+  <data name="SignatureVersion.Text" xml:space="preserve">
+    <value>हस्ताक्षर संस्करण</value>
+  </data>
+  <data name="PlatformVersion.Text" xml:space="preserve">
+    <value>प्लेटफ़ॉर्म संस्करण</value>
+  </data>
+  <data name="SignatureUpdate.Text" xml:space="preserve">
+    <value>हस्ताक्षर अपडेट (UTC)</value>
+  </data>
 </root>
