--- a/Harden System Security/Strings/ml-IN/Resources.resw
+++ b/Harden System Security/Strings/ml-IN/Resources.resw
@@ -2252,10 +2252,10 @@
     <data name="StatusHeader.Text" xml:space="preserve">
     <value>അവസ്ഥ</value>
   </data>
-  <data name="CurrentValueHeaderText" xml:space="preserve">
+  <data name="CurrentValueHeader.Text" xml:space="preserve">
     <value>നിലവിലെ മൂല്യം</value>
   </data>
-  <data name="ExpectedValueHeaderText" xml:space="preserve">
+  <data name="ExpectedValueHeader.Text" xml:space="preserve">
     <value>പ്രതീക്ഷിത മൂല്യം</value>
   </data>
   <!--Security Baselines ListView Headers End-->
@@ -2402,9 +2402,6 @@
     <data name="DragAndDropHintFileReputationCaption" xml:space="preserve">
      <value>പ്രശസ്തി പരിശോധിക്കാൻ ഫയൽ വിടുക</value>
   </data>
-  <data name="NoVerificationResultsToExport" xml:space="preserve">
-  <value>എക്‌സ്‌പോർട്ട് ചെയ്യാൻ പരിശോധന ഫലങ്ങളൊന്നുമില്ല</value>
-</data>
 <data name="ExportFileNameFormat" xml:space="preserve">
   <value>HardenSystemSecurity_Data_Export_{0}.json</value>
 </data>
@@ -4301,4 +4298,55 @@
   <data name="RestoreModeMenuFlyoutItem.Text" xml:space="preserve">
   <value>പുനഃസ്ഥാപന മോഡ്</value>
 </data>
+  <data name="SystemOverview.Text" xml:space="preserve">
+    <value>സിസ്റ്റം അവലോകനം</value>
+  </data>
+  <data name="SystemTime.Text" xml:space="preserve">
+    <value>സിസ്റ്റം സമയം</value>
+  </data>
+  <data name="TimeZone.Text" xml:space="preserve">
+    <value>സമയം മേഖല</value>
+  </data>
+  <data name="User.Text" xml:space="preserve">
+    <value>ഉപയോക്താവ്</value>
+  </data>
+  <data name="ComputerName.Text" xml:space="preserve">
+    <value>കമ്പ്യൂട്ടർ പേര്</value>
+  </data>
+  <data name="OperatingSystem.Text" xml:space="preserve">
+    <value>ഓപ്പറേറ്റിംഗ് സിസ്റ്റം</value>
+  </data>
+  <data name="Uptime.Text" xml:space="preserve">
+    <value>പ്രവർത്തന സമയം</value>
+  </data>
+  <data name="SystemRAM.Text" xml:space="preserve">
+    <value>സിസ്റ്റം RAM</value>
+  </data>
+  <data name="AppRAMUsage.Text" xml:space="preserve">
+    <value>ആപ്പ് RAM ഉപയോഗം</value>
+  </data>
+  <data name="StorageSize.Text" xml:space="preserve">
+    <value>സംഭരണ ശേഷി</value>
+  </data>
+  <data name="InternetSpeed.Text" xml:space="preserve">
+    <value>ഇന്റർനെറ്റ് വേഗം</value>
+  </data>
+  <data name="CPUTemperature.Text" xml:space="preserve">
+    <value>പ്രോസസർ താപനില</value>
+  </data>
+  <data name="OnlineMicrosoftDefenderStatus.Text" xml:space="preserve">
+    <value>ഓൺലൈൻ Microsoft Defender നില</value>
+  </data>
+  <data name="EngineVersion.Text" xml:space="preserve">
+    <value>എഞ്ചിൻ പതിപ്പ്</value>
+  </data>
+  <data name="SignatureVersion.Text" xml:space="preserve">
+    <value>സിഗ്നേച്ചർ പതിപ്പ്</value>
+  </data>
+  <data name="PlatformVersion.Text" xml:space="preserve">
+    <value>പ്ലാറ്റ്ഫോം പതിപ്പ്</value>
+  </data>
+  <data name="SignatureUpdate.Text" xml:space="preserve">
+    <value>സിഗ്നേച്ചർ അപ്‌ഡേറ്റ് (UTC)</value>
+  </data>
 </root>
