Adjusted translation for an item for AppControl Manager
Adjusted translation for an item for AppControl Manager

--- a/AppControl Manager/Strings/AR/Resources.resw
+++ b/AppControl Manager/Strings/AR/Resources.resw
@@ -5729,7 +5729,7 @@
 <data name="DeleteGroupDialogTitle" xml:space="preserve">
   <value>تأكيد حذف المجموعة</value>
 </data>
-<data name="Delete" xml:space="preserve">
+<data name="DeleteCertificateDialogPrimaryButton" xml:space="preserve">
   <value>حذف</value>
 </data>
 <data name="DeleteGroupDialogIntroSingle" xml:space="preserve">
