--- a/AppControl Manager/Strings/el-GR/Resources.resw
+++ b/AppControl Manager/Strings/el-GR/Resources.resw
@@ -5729,7 +5729,7 @@
 <data name="DeleteGroupDialogTitle" xml:space="preserve">
   <value>Επιβεβαίωση διαγραφής ομάδας</value>
 </data>
-<data name="Delete" xml:space="preserve">
+<data name="DeleteCertificateDialogPrimaryButton" xml:space="preserve">
   <value>Διαγραφή</value>
 </data>
 <data name="DeleteGroupDialogIntroSingle" xml:space="preserve">
