--- a/AppControl Manager/Strings/pl-PL/Resources.resw
+++ b/AppControl Manager/Strings/pl-PL/Resources.resw
@@ -5729,7 +5729,7 @@ UWAGA: Ta opcja jest zawsze wymuszana, jeśli jakakolwiek zasada UMCI Kontroli A
 <data name="DeleteGroupDialogTitle" xml:space="preserve">
   <value>Potwierdzenie usunięcia grupy</value>
 </data>
-<data name="Delete" xml:space="preserve">
+<data name="DeleteCertificateDialogPrimaryButton" xml:space="preserve">
   <value>Usuń</value>
 </data>
 <data name="DeleteGroupDialogIntroSingle" xml:space="preserve">
